--- a/src/editor/private/engine/CMakeLists.txt
+++ b/src/editor/private/engine/CMakeLists.txt
@@ -6,10 +6,23 @@ set(ARCTIC_ENGINE_VERSION_PATCH 0)
 # create target
 set(TARGET ArcticEngine)
 message("target is ${TARGET}")
-add_library(${TARGET} STATIC arctic_engine.cpp)
+add_library(${TARGET} STATIC)
 
+# set properties
+set(INCLUDE_DIRS ${EDITOR_MODULE_DIR}/public)
 set_target_properties(${TARGET} PROPERTIES LINKER_LANGUAGE CXX)
-set_target_properties(${TARGET} PROPERTIES INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR})
+set_target_properties(${TARGET} PROPERTIES INCLUDE_DIRS ${INCLUDE_DIRS})
+
+# set private sources
+target_sources(${TARGET}
+        PRIVATE
+        arctic_engine.cpp
+        vulkan_loader.cpp)
+
+# set public sources
+target_include_directories(${TARGET}
+        PRIVATE
+        ${INCLUDE_DIRS})
 
 # check platform
 if(WIN32)
