--- a/src/editor/engine/CMakeLists.txt
+++ b/src/editor/engine/CMakeLists.txt
@@ -8,20 +8,21 @@ set(TARGET ArcticEngine)
 message("target is ${TARGET}")
 add_library(${TARGET} STATIC)
 
-# set properties
+# set variables
 set(INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}/include)
 set(SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/src)
 
-set_target_properties(${TARGET} PROPERTIES LINKER_LANGUAGE CXX)
-set_target_properties(${TARGET} PROPERTIES INCLUDE_DIRS ${INCLUDE_DIRS})
+# set properties
+set_target_properties(${TARGET} PROPERTIES
+        INCLUDE_DIRS ${INCLUDE_DIRS})
 
-# set private sources
+# set sources
 target_sources(${TARGET}
         PRIVATE
         ${SRC_DIR}/arctic_engine.cpp
         ${SRC_DIR}/vulkan_loader.cpp)
 
-# set public sources
+# set includes
 target_include_directories(${TARGET}
         PRIVATE
         ${INCLUDE_DIRS})
